[20200407] update footer first post

--- a/20200327/20200327_post.md
+++ b/20200327/20200327_post.md
@@ -58,4 +58,4 @@ docker-compose exec -T db psql -h docker.for.mac.localhost -p 5433 -U <username>
 ```
 ------
 
-This post is the first of an ongoing *This Week I Learned* series. The table of contents page can be found [here](https://dev.to/noelworden/beginning-of-a-blog-series-5aj3). This solution is solved as I best saw fit, I welcome any critique, feedback, or suggestions in the comments.
+This post is the first of an ongoing *This Week I Learned* [series](https://dev.to/noelworden/beginning-of-a-blog-series-5aj3). I welcome any critique, feedback, or suggestions in the comments.
