[20200512] updated last weeks post with title

--- a/20200501/20200501_post.md
+++ b/20200501/20200501_post.md
@@ -1,3 +1,6 @@
+Breaking Down Elixir's `with` Expression
+elixir, thisweekilearned, learning
+
 This week I bit the bullet and conquered my fear of Elixir's [`with`](https://hexdocs.pm/elixir/Kernel.SpecialForms.html#with) expression. I had managed to write a few small ones in the past, but it was not intuitive and I really struggled. But now I had a deeply nested `case` statement, and it need to be refactored. It took the fourth or fifth blog post until it clicked for me. I can't quite put my finger on why it took a hot second for me to wrap my head around, but it just wasn't happening. 
 
 I did successfully rewrite the `case` statement as a `with` expression, and although that work is still a PR, I feel good about what I wrote. Coming fresh off that experience, I thought it would be good practice to write my own explanation of how a `with` expression is executed, both to solidify my knowledge and write it out in a way that helps others curious in its utility. 
@@ -213,7 +216,7 @@ And if the `last_name` key was not present:
 
 The underscore is a catch-all for the tuple key, and as long as the value `:errror` matches, it will output that string. Same with the boolean check, if that matched any of tuple values, regardless of the key, it would output its respective string. 
 
-That is the core of a `with` statement. Matching left to right, executing a `do` block if it succeeds, and and `else` block if it does not. I was a bit stubborn to accept it at first, but it is much cleaner logic than a deeply nested `case` statement. I hope this helps clear up some of the potential murkiness around this approach for conditionals. If you'd like to explore some more, here are some links I found while researching the topic:
+That is the core of a `with` expression. Matching left to right, executing a `do` block if it succeeds, and and `else` block if it does not. I was a bit stubborn to accept it at first, but it is much cleaner logic than a deeply nested `case` statement. I hope this helps clear up some of the potential murkiness around this approach for conditionals. If you'd like to explore some more, here are some links I found while researching the topic:
 
 https://hexdocs.pm/elixir/Kernel.SpecialForms.html#with
 https://www.openmymind.net/Elixirs-With-Statement/
